language_tests/outputs/invalid/use_after_move.out
error: use of moved value 'x'
 -> language_tests/source_files/invalid/use_after_move.tr:13:12
	    let z = x  // ERROR: use of moved value 'x'
	            ^
